--- a/react-deploy/package.json
+++ b/react-deploy/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
+    "p5": "^1.1.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-p5-wrapper": "^2.3.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
