--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "d3": "^6.2.0",
+    "heroku": "^7.43.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
     "topojson": "^3.0.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
