--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "heroku": "^7.43.2",
+    "p5": "^1.1.9",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-p5-wrapper": "^2.3.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
