--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "cors": "^2.8.5",
-    "heroku": "^7.43.2",
-    "p5": "^1.1.9",
+    "d3": "^6.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-p5-wrapper": "^2.3.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "topojson": "^3.0.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
