Created slider that moves left/right in date using the option of either dragging a handle left/right or left/right arrow keys. It will pass in the currently selected date to child classes. It also has the option of playing/pausing it going through all the dates at a rate that can be controlled (and each time it does, it will communicate current date with children causing re-renders while it moves along)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "cors": "^2.8.5",
     "d3": "^6.2.0",
+    "d3-simple-slider": "^1.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
