--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-p5-wrapper": "^2.3.0",
     "react-scripts": "3.4.3",
+    "tone": "^14.7.58",
     "topojson": "^3.0.2"
   },
   "scripts": {
