Changed extension in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://samiea.github.io/Ocean-Weather-Visualization",
+  "homepage": "https://samiea.github.io/Envirovision",
   "name": "react-deploy",
   "version": "0.1.0",
   "private": true,
